--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site teste</title>
+    <title>curso gratis</title>
 </head>
 <body>
     <main>
         <header>
-            <h1> testando</h1>
+            <h1> Curso html</h1>
         </header>
         <article>
             <h2> artigo 001</h2>
@@ -17,7 +17,7 @@
 
         </article>
         <article>
-            <h2> artigo 002</h2>
+            <h2> curso de java script</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo soluta quas at porro reiciendis, itaque quos temporibus eveniet accusantium eius ab recusandae sunt magni, dolorem, ipsum rem. Rerum, nihil quibusdam.</p>
         </article>
 
