--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <main>
         <header>
-            <h1> Curso html</h1>
+            <h1 > Git HUB</h1>
         </header>
         <article>
-            <h2> artigo 001</h2>
+            <h2>Curso HTML</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo soluta quas at porro reiciendis, itaque quos temporibus eveniet accusantium eius ab recusandae sunt magni, dolorem, ipsum rem. Rerum, nihil quibusdam.</p>
 
 
